// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment_after.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---
/* comment */
.something {
}

=====================================output=====================================
---
title: Title
description: Description
---

/* comment */
.something {
}

================================================================================
`;

exports[`dirty.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
hello:     world
a:       
            - 123
            - 666
---

.class {



}

=====================================output=====================================
---
hello: world
a:
  - 123
  - 666
---

.class {
}

================================================================================
`;

exports[`empty.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
---

a {
    color: red;
}

=====================================output=====================================
---
---

a {
  color: red;
}

================================================================================
`;

exports[`empty_newlines.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---



---



a {
    color: red;
}

=====================================output=====================================
---
---

a {
  color: red;
}

================================================================================
`;

exports[`ignore.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
hello: world
---

/* prettier-ignore */
.foo {}

=====================================output=====================================
---
hello: world
---

/* prettier-ignore */
.foo {}

================================================================================
`;

exports[`malformed.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
aaa
b---

a {
    color: red;
}
=====================================output=====================================
--- aaa b--- a {
  color: red;
}

================================================================================
`;

exports[`malformed-2.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
foo: bar
---

a {
color:blue
}

---

.b {
color:red
}
=====================================output=====================================
---
foo: bar
---

a {
  color: blue;
}

--- .b {
  color: red;
}

================================================================================
`;

exports[`only_comments.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
# comment 1
# comment 2
# comment 3
---

a {
    color: red;
}

=====================================output=====================================
---
# comment 1
# comment 2
# comment 3
---

a {
  color: red;
}

================================================================================
`;

exports[`with_comments.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
# This is a comment
---

a {
    color: red;
}
=====================================output=====================================
---
title: Title
description: Description
# This is a comment
---

a {
  color: red;
}

================================================================================
`;

exports[`without-newline-after.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---
a {
    color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;

exports[`yaml.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---

a {
    color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;

exports[`yaml.less 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---

a {
  color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;

exports[`yaml.scss 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---

a {
  color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;
